<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="4dp"
    >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_gen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="GENERAL"
            android:gravity="center"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/lay_bg"
        android:padding="8dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tv_genlist"
            style="@style/text"
            android:text="@string/title3" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_genlist"
                style="@style/edit_text"
                android:hint="@string/title4"
                android:maxLength="2"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_genlist"
            style="@style/btn_style"
            android:text="@string/title10" />
        <TextView
            android:id="@+id/tv_gen_mb_list_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="16dp"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/lay_bg"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_genread"
            style="@style/text"
            android:text="@string/title5" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_genread"
                style="@style/edit_text"
                android:hint="@string/title4"
                android:maxLength="2"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_genred"
            style="@style/btn_style"
            android:text="@string/title10" />

        <TextView
            android:id="@+id/tv_gen_mb_read_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="16dp"
            android:gravity="center"
            />

    </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
