<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="4dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_gen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="GENERAL"
            android:gravity="center"
            />

    </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/lay_bg"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv1_genlist"
                        style="@style/text"
                        android:text="@string/title3" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et1_genlist"
                            style="@style/edit_text"
                            android:hint="@string/title17"
                            android:maxLength="3"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn1_genlist"
                        style="@style/btn_style"
                        android:text="@string/title14" />
                    <TextView
                        android:id="@+id/tv1_gen_bm_list_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="16dp"
                        android:gravity="center"
                        />
                    <TextView
                        android:id="@+id/tv2_gen_bm_list_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="16dp"
                        android:gravity="center"
                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/lay_bg"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv1_genread"
                        style="@style/text"
                        android:text="@string/title5" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et1_genread"
                            style="@style/edit_text"
                            android:hint="@string/title11"
                            android:maxLength="3"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn1_genred"
                        style="@style/btn_style"
                        android:text="@string/title14" />

                    <TextView
                        android:id="@+id/tv1_gen_bm_red_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="16dp"
                        android:gravity="center"
                        />
                    <TextView
                        android:id="@+id/tv2_gen_bm_red_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="16dp"
                        android:gravity="center"
                        />

                </LinearLayout>





            </LinearLayout>
        </ScrollView>

    </LinearLayout>

